tests/snapshots/examples_fixtures/basics__array_builtins.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/array_builtins.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:6:1
  |
6 | print(len(arr));
  | ^^^^^^^^^^^^^^^^
  | ---------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/basics/array_builtins.flx:6:1
  |
6 | print(len(arr));
  | ^^^^^^^^^^^^^^^^
  | ---------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:7:1
  |
7 | print(len([||]));
  | ^^^^^^^^^^^^^^^^^
  | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:10:1
   |
10 | print(first(arr));
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:13:1
   |
13 | print(last(arr));
   | ^^^^^^^^^^^^^^^^^
   | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:16:1
   |
16 | print(rest(arr));
   | ^^^^^^^^^^^^^^^^^
   | ----------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:19:1
   |
19 | print(push(arr, 6));
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:22:1
   |
22 | print(first([||]));
   | ^^^^^^^^^^^^^^^^^^^
   | ------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:23:1
   |
23 | print(last([||]));
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:24:1
   |
24 | print(rest([||]));
   | ^^^^^^^^^^^^^^^^^^
   | ------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:33:1
   |
33 | print(concat(a, b));
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:36:1
   |
36 | print(reverse(arr));
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:40:1
   |
40 | print(contains(fruits, "banana"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:41:1
   |
41 | print(contains(fruits, "grape"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | --------------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:45:1
   |
45 | print(slice(items, 1, 4));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:46:1
   |
46 | print(slice(items, 0, 2));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   | -------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:50:1
   |
50 | print(sort(unsorted));
   | ^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:53:1
   |
53 | print(sort(unsorted, "asc"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ----------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:56:1
   |
56 | print(sort(unsorted, "desc"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:60:1
   |
60 | print(sort(floats));
   | ^^^^^^^^^^^^^^^^^^^^
   | -------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:61:1
   |
61 | print(sort(floats, "desc"));
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   | ---------------------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/basics/array_builtins.flx:70:1
   |
70 | print(topThree(scores));
   | ^^^^^^^^^^^^^^^^^^^^^^^^
   | ------------------------ top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.

Found 22 errors.
== stdout ==
<not executed>
